--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -24,14 +24,14 @@ spec:
   azure:
     application:
       enabled: true
-  tokenx:
-    enabled: true
-  #  accessPolicy:
-  #    inbound:
-  #      rules:
-  #        - application: {{clientApplication}}
-  #          namespace: {{clientApplicationNamespace}}
-  #          cluster: {{clientApplicationCluster}}
+    #  tokenx:
+    #    enabled: true
+    accessPolicy:
+      inbound:
+        rules:
+          - application: {{clientApplication}}
+            namespace: {{clientApplicationNamespace}}
+            cluster: {{clientApplicationCluster}}
   elastic:
     instance: rekrutteringsbistand-stilling
   # Legg til envFrom: secret
