Endre svarformat for å unngå escapa json

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NAIS_CLUSTER_NAME=local
-ELASTIC_SEARCH_API=https://elastic-arbeidsgiver-rekrutteringsbistand-stilling-nav-dev.aivencloud.com:26482
+ELASTIC_SEARCH_API=url
 ES_USERNAME=brukernavn
 ES_PASSWORD=passord
