--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NAIS_CLUSTER_NAME=local
-ELASTIC_SEARCH_API=url
+ELASTIC_SEARCH_API=http://localhost:9000
 ES_USERNAME=brukernavn
 ES_PASSWORD=passord
