--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-NAIS_CLUSTER_NAME=local
-ELASTIC_SEARCH_API=http://localhost:9000
-ES_USERNAME=brukernavn
-ES_PASSWORD=passord
+NAIS_CLUSTER_NAME=dev-gcp
+ELASTIC_SEARCH_API=https://elastic-arbeidsgiver-rekrutteringsbistand-stilling-nav-dev.aivencloud.com:26482
