Legg til alerts for prod

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,3 +74,15 @@ jobs:
           VAR: image=${{ env.IMAGE }}
           RESOURCE: nais/nais.yaml
           VARS: nais/nais-prod.json
+
+  deploy-alerts:
+    name: Deploy alerts to prod
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: nais/deploy/actions/deploy@v1
+        env:
+          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
+          CLUSTER: prod-gcp
+          RESOURCE: nais/alerts.yaml
