--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
   deploy-to-dev:
     name: Deploy to dev
     needs: test
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/test-sikkerhetsfilter-endring'
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/logg-token'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
