--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -19,6 +19,9 @@ spec:
   azure:
     application:
       enabled: true
+      claims:
+        extra:
+          - NAVident
   accessPolicy:
     inbound:
       rules:
