Fiks miljøvariabler for tester

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NAIS_CLUSTER_NAME=local
-ELASTIC_SEARCH_API=http://localhost:9000
-ES_USERNAME=brukernavn
-ES_PASSWORD=password
+OPEN_SEARCH_URI=http://localhost:9000
+OPEN_SEARCH_USERNAME=brukernavn
+OPEN_SEARCH_PASSWORD=password
