--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -2,9 +2,9 @@ apiVersion: "nais.io/v1alpha1"
 kind: "Application"
 metadata:
   name: rekrutteringsbistand-stillingssok-proxy
-  namespace: arbeidsgiver
+  namespace: toi
   labels:
-    team: arbeidsgiver
+    team: toi
 spec:
   image: {{image}}
   port: 8300
