--- a/nais/alerts.yaml
+++ b/nais/alerts.yaml
@@ -2,9 +2,9 @@ apiVersion: "nais.io/v1"
 kind: "Alert"
 metadata:
   name: rekrutteringsbistand-stillingssok-proxy-alert
-  namespace: arbeidsgiver
+  namespace: toi
   labels:
-    team: arbeidsgiver
+    team: toi
 spec:
   receivers:
     slack:
