--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: '15.x'
+          java-version: '17'
+          distribution: 'temurin'
       - uses: actions/cache@v2
         with:
           path: |
@@ -32,9 +33,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: '15.x'
+          java-version: '17'
+          distribution: 'temurin'
       - uses: actions/cache@v2
         with:
           path: |
