Appen rekbis-statistikk-api har nå blitt flyttet til team+namespace toi

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -26,7 +26,7 @@ spec:
     inbound:
       rules:
         - application: rekrutteringsbistand-statistikk-api
-          namespace: arbeidsgiver
+          namespace: toi
           cluster: {{fss-cluster}}
         - application: foresporsel-om-deling-av-cv-api
           namespace: arbeidsgiver-inkludering
