--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -19,6 +19,7 @@ spec:
   azure:
     application:
       enabled: true
+      allowAllUsers: true
       claims:
         extra:
           - NAVident
