--- a/nais/alerts.yaml
+++ b/nais/alerts.yaml
@@ -1,23 +1,40 @@
-apiVersion: "nais.io/v1"
-kind: "Alert"
+apiVersion: monitoring.coreos.com/v1
+kind: PrometheusRule
 metadata:
   name: rekrutteringsbistand-stillingssok-proxy
   namespace: toi
   labels:
     team: toi
 spec:
-  receivers:
-    slack:
-      channel: 'inkludering-alerts-prod'
-  alerts:
-    - alert: Applikasjon nede
-      expr: sum(up{app="rekrutteringsbistand-stillingssok-proxy", job="kubernetes-pods"}) == 0
-      for: 1s
-      description: "rekrutteringsbistand-stillingssok-proxy er nede"
-      action: "https://logs.adeo.no/goto/8004078c866a597a534a22dcd68286d2"
+  groups:
+    - name: rekrutteringsbistand-stillingssok-proxy
+      rules:
+        - alert: rekrutteringsbistand-stillingssok-proxy
+          expr: sum(up{app="rekrutteringsbistand-stillingssok-proxy", job="nais-system/monitoring-apps-tenant"}) == 0
+          for: 1s
+          annotations:
+            summary: Appen er nede
+            action: "https://logs.adeo.no/goto/8004078c866a597a534a22dcd68286d2"
+          labels:
+            namespace: toi
+            severity: critical
 
-    - alert: Det har skjedd en feil i rekrutteringsbistand-stillingssok-proxy
-      expr: sum(increase(logd_messages_total{log_app="rekrutteringsbistand-stillingssok-proxy",log_level="Error"}[10m])) > 0
-      for: 10s
-      description: "rekrutteringsbistand-stillingssok-proxy har logget en feil"
-      action: "https://logs.adeo.no/goto/65247d47faf9d72de685a7f6aec8b6b2"
+        - alert: rekrutteringsbistand-stillingssok-proxy
+          expr: sum(increase(logd_messages_total{log_app="rekrutteringsbistand-stillingssok-proxy",log_level="Error"}[10m])) > 0
+          for: 1s
+          annotations:
+            summary: Appen har logget en error
+            action: "https://logs.adeo.no/goto/8004078c866a597a534a22dcd68286d2"
+          labels:
+            namespace: toi
+            severity: critical
+
+        - alert: rekrutteringsbistand-stillingssok-proxy
+          expr: (100 * sum by (log_app, log_namespace) (rate(logd_messages_total{log_app="rekrutteringsbistand-stillingssok-proxy  ",log_level=~"Warning"}[5m])) / sum by (log_app, log_namespace) (rate(logd_messages_total{log_app="rekrutteringsbistand-stillingssok-proxy  "}[5m]))) > 5
+          for: 3m
+          annotations:
+            summary: Økning i warnings
+            action: "https://logs.adeo.no/goto/8004078c866a597a534a22dcd68286d2"
+          labels:
+            namespace: toi
+            severity: warning
