--- a/nais/alerts.yaml
+++ b/nais/alerts.yaml
@@ -20,7 +20,7 @@ spec:
             severity: critical
 
         - alert: rekrutteringsbistand-stillingssok-proxy
-          expr: sum(increase(logd_messages_total{log_app="rekrutteringsbistand-stillingssok-proxy",log_level="Error"}[10m])) > 0
+          expr: sum(increase(log_messages_errors{app="rekrutteringsbistand-stillingssok-proxy", level="Error"}[10m])) > 0
           for: 1s
           annotations:
             summary: Appen har logget en error
@@ -30,8 +30,8 @@ spec:
             severity: critical
 
         - alert: rekrutteringsbistand-stillingssok-proxy
-          expr: (100 * sum by (log_app, log_namespace) (rate(logd_messages_total{log_app="rekrutteringsbistand-stillingssok-proxy  ",log_level=~"Warning"}[5m])) / sum by (log_app, log_namespace) (rate(logd_messages_total{log_app="rekrutteringsbistand-stillingssok-proxy  "}[5m]))) > 5
-          for: 3m
+          expr: sum(increase(log_messages_errors{app="rekrutteringsbistand-stillingssok-proxy", level="Warning"}[10m])) > 3
+          for: 1s
           annotations:
             summary: Økning i warnings
             action: "https://logs.adeo.no/goto/8004078c866a597a534a22dcd68286d2"
