Minsk ressursbruk, sett min.pods til 1 i dev

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on: [ push ]
 env:
   IMAGE: ghcr.io/${{ github.repository }}/rekrutteringsbistand-stillingssok-proxy:${{ github.sha }}
 
+permissions:
+  packages: write
+
 jobs:
   test:
     name: Run tests
