--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -26,18 +26,21 @@ spec:
   azure:
     application:
       enabled: true
-      allowAllUsers: true
+      allowAllUsers: false
       claims:
         extra:
           - NAVident
+        groups:
+          - id: {{ adGruppeModiaGenerellTilgang }}
+          - id: {{ adGruppeJobbsøkerrettet }}
+          - id: {{ adGruppeArbeidsgiverrettet }}
+          - id: {{ adGruppeUtvikler }}
   accessPolicy:
     inbound:
       rules:
         - application: foresporsel-om-deling-av-cv-api
           namespace: arbeidsgiver-inkludering
           cluster: {{fss-cluster}}
-        - application: rekrutteringsbistand-stillingssok
-        - application: rekrutteringsbistand-container
         - application: rekrutteringsbistand
   openSearch:
     access: read
