--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -42,6 +42,7 @@ spec:
           namespace: arbeidsgiver-inkludering
           cluster: {{fss-cluster}}
         - application: rekrutteringsbistand
+        - application: rekrutteringsbistand-frontend
   openSearch:
     access: read
     instance: rekrutteringsbistand-stilling
