--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
       - name: Build jar with Gradle
-        run: ./gradlew shadowJar
+        run: ./gradlew build
       - name: Push docker image to GAR
         uses: nais/docker-build-push@v0
         id: docker-build-push
