--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -23,6 +23,8 @@ spec:
     requests:
       cpu: {{requested_cpu}}
       memory: 512Mi
+  secureLogs:
+    enabled: true
   azure:
     application:
       enabled: true
