--- a/nais/alerts.yaml
+++ b/nais/alerts.yaml
@@ -14,7 +14,7 @@ spec:
           for: 1s
           annotations:
             summary: Appen er nede
-            action: "https://logs.adeo.no/goto/8004078c866a597a534a22dcd68286d2"
+            action: "https://logs.adeo.no/app/r/s/5DXEM"
           labels:
             namespace: toi
             severity: critical
@@ -24,7 +24,7 @@ spec:
           for: 1s
           annotations:
             summary: Appen har logget en error
-            action: "https://logs.adeo.no/goto/8004078c866a597a534a22dcd68286d2"
+            action: "https://logs.adeo.no/app/r/s/5DXEM"
           labels:
             namespace: toi
             severity: critical
@@ -34,7 +34,7 @@ spec:
           for: 1s
           annotations:
             summary: Økning i warnings
-            action: "https://logs.adeo.no/goto/8004078c866a597a534a22dcd68286d2"
+            action: "https://logs.adeo.no/app/r/s/5DXEM"
           labels:
             namespace: toi
             severity: warning
