--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ on: [ push, workflow_dispatch ]
 
 jobs:
   call-build-and-deploy:
-    uses: navikt/toi-github-actions-workflows/.github/workflows/build-and-deploy.yaml@main
+    uses: navikt/toi-github-actions-workflows/.github/workflows/build-and-deploy.yaml@v1
     with:
       java-version: '17'
       deploy-to-dev-if-branch-name-is: 'trivy'
@@ -12,3 +12,4 @@ jobs:
       id-token: write
       security-events: write
     secrets: inherit
+
