--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ jobs:
     uses: navikt/toi-github-actions-workflows/.github/workflows/build-and-deploy.yaml@main
     with:
       java-version: '17'
-      deploy-to-dev-if-branch-name-is: 'trivy'
+      deploy-to-dev-if-branch-name-is: 'oppgrader-avhengigheter'
     permissions:
       contents: read
       id-token: write
