--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,8 @@ jobs:
   call-build-and-deploy:
     uses: navikt/toi-github-actions-workflows/.github/workflows/build-and-deploy.yaml@v1
     with:
-      java-version: '17'
-      deploy-to-dev-if-branch-name-is: 'trivy'
+      java-version: '21'
+      deploy-to-dev-if-branch-name-is: 'oppgrader-avhengigheter'
     permissions:
       contents: read
       id-token: write
