Logg til både Elastic og Loki

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -47,3 +47,9 @@ spec:
   openSearch:
     access: read
     instance: rekrutteringsbistand-stilling
+  observability:
+    logging:
+      destinations:
+        - id: loki
+        - id: elastic
+      enabled: true
