Bytt til ny indeks toi-stilling
Co-authored-by: Sara <43448582+haugse@users.noreply.github.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ jobs:
     uses: navikt/toi-github-actions-workflows/.github/workflows/build-and-deploy.yaml@v1
     with:
       java-version: '21'
-      deploy-to-dev-if-branch-name-is: 'oppgrader-avhengigheter'
+      deploy-to-dev-if-branch-name-is: 'bytt-indeks'
     permissions:
       contents: read
       id-token: write
