Legg til at tidtaking av kall til opensearch

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -23,6 +23,9 @@ spec:
     requests:
       cpu: {{requested_cpu}}
       memory: 512Mi
+  prometheus:
+    enabled: true
+    path: /internal/prometheus
   azure:
     application:
       enabled: true
