Endre instans av opensearch
Co-authored-by: Ken Ove Andersen <ken.ove.andersen@nav.no>

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -49,7 +49,7 @@ spec:
         - application: rekrutteringsbistand-stilling-api
   openSearch:
     access: read
-    instance: rekrutteringsbistand-stilling
+    instance: toi-stilling
   observability:
     logging:
       destinations:
