Bruk team logs for å kunne logge hva som har blitt sendt av ugyldige requester

--- a/nais/nais.yaml
+++ b/nais/nais.yaml
@@ -47,6 +47,10 @@ spec:
         - application: rekrutteringsbistand
         - application: rekrutteringsbistand-frontend
         - application: rekrutteringsbistand-stilling-api
+    outbound:
+      rules:
+        - application: logging
+          namespace: nais-system
   openSearch:
     access: read
     instance: toi-stilling
