--- a/nais/alerts.yaml
+++ b/nais/alerts.yaml
@@ -14,7 +14,7 @@ spec:
           for: 1s
           annotations:
             summary: Appen er nede
-            action: "https://logs.adeo.no/app/r/s/5DXEM"
+            action: "https://logs.az.nav.no/goto/6bce5b9ae662af4599a38d51eb418427?security_tenant=navlogs"
           labels:
             namespace: toi
             severity: critical
@@ -24,7 +24,7 @@ spec:
           for: 1s
           annotations:
             summary: Appen har logget en error
-            action: "https://logs.adeo.no/app/r/s/5DXEM"
+            action: "https://logs.az.nav.no/goto/6bce5b9ae662af4599a38d51eb418427?security_tenant=navlogs"
           labels:
             namespace: toi
             severity: critical
@@ -34,7 +34,7 @@ spec:
           for: 1s
           annotations:
             summary: Økning i warnings
-            action: "https://logs.adeo.no/app/r/s/5DXEM"
+            action: "https://logs.az.nav.no/goto/6bce5b9ae662af4599a38d51eb418427?security_tenant=navlogs"
           labels:
             namespace: toi
             severity: warning
