--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ jobs:
     uses: navikt/toi-github-actions-workflows/.github/workflows/build-and-deploy.yaml@v1
     with:
       java-version: '21'
-      deploy-to-dev-if-branch-name-is: 'legg_til_logging_av_ugyldige_requests'
+      deploy-to-dev-if-branch-name-is: 'os-post'
     permissions:
       contents: read
       id-token: write
